# Sally-Dashboard

./: LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: static.yml
Software/Dashboard/: .gitignore  Cargo.toml  Notes.md  notes.md
Software/Dashboard/.cargo/: config.toml
Software/Dashboard/.zed/: settings.json
Software/Dashboard/src/: btn_mod.rs  can_mod.rs  display.rs  display_mod.rs  eco_can.rs  led.rs  led_mod.rs  lib.rs  main.rs
Software/Dashboard/src/mode/: charging.rs  init_charging.rs  init_running.rs  mod.rs  running.rs  standby.rs  startup.rs
